comment form style fix on mobile

--- a/src/app/caption-man/caption-man.component.less
+++ b/src/app/caption-man/caption-man.component.less
@@ -221,6 +221,14 @@
 
         .form-wrapper {
           width: 100%;
+
+          @media (max-width: 768px) {
+            .navbar-form {
+              border: none;
+              margin: 0;
+            }
+          }
+
           .form-group {
             width: 100%;
             input {
